--- a/packages/mcp-server-supabase/package.json
+++ b/packages/mcp-server-supabase/package.json
@@ -30,6 +30,7 @@
     "@gregnr/postgres-meta": "^0.82.0-dev.2",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@supabase/mcp-utils": "0.1.1",
+    "common-tags": "^1.8.2",
     "openapi-fetch": "^0.13.4",
     "postgres": "^3.4.5",
     "zod": "^3.24.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@electric-sql/pglite": "^0.2.17",
     "@total-typescript/tsconfig": "^1.0.4",
+    "@types/common-tags": "^1.8.4",
     "@types/node": "^22.8.6",
     "date-fns": "^4.1.0",
     "msw": "^2.7.3",
