--- a/packages/mcp-server-supabase/package.json
+++ b/packages/mcp-server-supabase/package.json
@@ -27,14 +27,11 @@
     }
   },
   "dependencies": {
-    "@gregnr/postgres-meta": "^0.82.0-dev.2",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@supabase/mcp-utils": "0.1.2",
     "common-tags": "^1.8.2",
     "openapi-fetch": "^0.13.4",
-    "postgres": "^3.4.5",
-    "zod": "^3.24.1",
-    "zod-to-json-schema": "^3.24.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@electric-sql/pglite": "^0.2.17",
