--- a/packages/mcp-server-supabase/package.json
+++ b/packages/mcp-server-supabase/package.json
@@ -11,6 +11,8 @@
     "build": "tsup --clean",
     "prepublishOnly": "npm run build",
     "test": "vitest",
+    "test:e2e": "vitest --project e2e",
+    "test:unit": "vitest --project unit",
     "generate:management-api-types": "openapi-typescript https://api.supabase.com/api/v1-json -o ./src/management-api/types.ts"
   },
   "files": [
@@ -34,11 +36,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@ai-sdk/anthropic": "^1.2.9",
     "@electric-sql/pglite": "^0.2.17",
     "@total-typescript/tsconfig": "^1.0.4",
     "@types/common-tags": "^1.8.4",
     "@types/node": "^22.8.6",
+    "ai": "^4.3.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "msw": "^2.7.3",
     "nanoid": "^5.1.5",
     "openapi-typescript": "^7.5.0",
