--- a/packages/mcp-server-supabase/package.json
+++ b/packages/mcp-server-supabase/package.json
@@ -29,10 +29,11 @@
     }
   },
   "dependencies": {
+    "@deno/eszip": "^0.84.0",
     "@modelcontextprotocol/sdk": "^1.4.1",
     "@supabase/mcp-utils": "0.1.3",
     "common-tags": "^1.8.2",
-    "openapi-fetch": "^0.13.4",
+    "openapi-fetch": "^0.13.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
