--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   ],
   "scripts": {
     "build": "npm run build --workspace @supabase/mcp-utils --workspace @supabase/mcp-server-supabase",
-    "test": "npm run test --workspace @supabase/mcp-utils --workspace @supabase/mcp-server-supabase"
+    "test": "npm run test --workspace @supabase/mcp-utils --workspace @supabase/mcp-server-supabase",
+    "test:coverage": "npm run test:coverage --workspace @supabase/mcp-server-supabase"
   },
   "devDependencies": {
     "supabase": "^2.1.1"
