--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --ignore-scripts
       - name: Build libs
-        run: npm run build
+        run: |
+          npm run build
+          npm rebuild # To create bin links
       - name: Tests
         run: npm run test:coverage
       - name: Upload coverage results to Coveralls
