--- a/packages/mcp-server-postgrest/package.json
+++ b/packages/mcp-server-postgrest/package.json
@@ -12,9 +12,7 @@
     "prepublishOnly": "npm run build",
     "test": "vitest"
   },
-  "files": [
-    "dist/**/*"
-  ],
+  "files": ["dist/**/*"],
   "bin": {
     "mcp-server-postgrest": "./dist/stdio.js"
   },
