--- a/packages/mcp-server-supabase/package.json
+++ b/packages/mcp-server-supabase/package.json
@@ -8,18 +8,19 @@
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
+    "prebuild": "npm run generate:content-api-schema",
     "build": "tsup --clean",
     "prepublishOnly": "npm run build",
+    "pretest": "npm run generate:content-api-schema",
     "test": "vitest",
     "test:unit": "vitest --project unit",
     "test:e2e": "vitest --project e2e",
     "test:integration": "vitest --project integration",
     "test:coverage": "vitest --coverage",
+    "generate:content-api-schema": "tsx scripts/fetch-content-api-schema.ts",
     "generate:management-api-types": "openapi-typescript https://api.supabase.com/api/v1-json -o ./src/management-api/types.ts"
   },
-  "files": [
-    "dist/**/*"
-  ],
+  "files": ["dist/**/*"],
   "bin": {
     "mcp-server-supabase": "./dist/stdio.js"
   },
@@ -48,6 +49,7 @@
     "ai": "^4.3.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "graphql": "^16.11.0",
     "msw": "^2.7.3",
     "nanoid": "^5.1.5",
     "openapi-typescript": "^7.5.0",
