--- a/packages/mcp-server-postgrest/package.json
+++ b/packages/mcp-server-postgrest/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
-    "@supabase/mcp-utils": "*",
+    "@supabase/mcp-utils": "^0.2.1",
     "@supabase/sql-to-rest": "^0.1.8",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
