chore: add biome for code formatting only
- Add @biomejs/biome 1.9.4 as devDependency
- Configure biome.json with formatting rules only (linting disabled)
- Set up formatting preferences: 2 spaces, single quotes, ES5 trailing commas
- Enable import organization
- Ignore dist directories and generated type files

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
     "build": "npm run build --workspace @supabase/mcp-utils --workspace @supabase/mcp-server-supabase",
     "test": "npm run test --workspace @supabase/mcp-utils --workspace @supabase/mcp-server-supabase",
-    "test:coverage": "npm run test:coverage --workspace @supabase/mcp-server-supabase"
+    "test:coverage": "npm run test:coverage --workspace @supabase/mcp-server-supabase",
+    "format": "biome check --write .",
+    "format:check": "biome check ."
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "supabase": "^2.1.1"
   }
 }
