Revert "style: format existing files"
This reverts commit 16654dd21941579963acba532854f9e41bbf1fca.

--- a/packages/mcp-server-postgrest/package.json
+++ b/packages/mcp-server-postgrest/package.json
@@ -12,7 +12,9 @@
     "prepublishOnly": "npm run build",
     "test": "vitest"
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "bin": {
     "mcp-server-postgrest": "./dist/stdio.js"
   },
